--- a/daily-challenge/styles/full-week.css
+++ b/daily-challenge/styles/full-week.css
@@ -5,11 +5,11 @@ header {
 h1 {
     font-size: 48px;
     color: rgb(71, 62, 62);
-    margin: 12px 0;
+    margin: 0;
 }
 
 #description {
-    margin-bottom: 36px;
+    margin: 12px 0;
 }
 
 /*header p {*/
@@ -23,6 +23,8 @@ a {
     border-radius: 4px;
     border: 1px solid rgb(167, 1, 78);
     font-size: 24px;
+    display: inline-block;
+    margin: 0;
 }
 
 a:hover {
@@ -42,6 +44,7 @@ li {
     margin: 32px;
     background-color: rgb(223, 136, 124);
     border-radius: 6px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
