--- a/travel-page/shared.css
+++ b/travel-page/shared.css
@@ -3,6 +3,17 @@ body {
     margin: 0;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 60px;
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -18,3 +29,27 @@ ul {
     text-transform: uppercase;
     text-shadow: 1px 1px 2px rgb(0, 0, 0)
 }
+
+header ul {
+    display: flex;
+}
+
+header li {
+    margin-left: 20px;
+}
+
+header ul a {
+    color: rgb(255, 251, 0);
+    text-decoration: none;
+    font-size: 20px;
+    padding: 12px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+
+}
+
+header ul a:hover {
+    color: rgb(77, 77, 77);
+    background-color: rgb(255, 251, 0);
+    border-radius: 6px;
+}
+
