--- a/travel-page/shared.css
+++ b/travel-page/shared.css
@@ -3,21 +3,22 @@ body {
     margin: 0;
 }
 
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 15px 60px;
     position: absolute;
     width: 100%;
-    box-sizing: border-box;
     top: 0;
     left: 0;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
 #page-logo a {
@@ -27,7 +28,7 @@ ul {
     font-size: 50px;
     text-decoration: none;
     text-transform: uppercase;
-    text-shadow: 1px 1px 2px rgb(0, 0, 0)
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
 header ul {
@@ -44,12 +45,32 @@ header ul a {
     font-size: 20px;
     padding: 12px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-
-}
-
-header ul a:hover {
-    color: rgb(77, 77, 77);
-    background-color: rgb(255, 251, 0);
     border-radius: 6px;
 }
 
+header a:hover {
+    color: rgb(77, 77, 77);
+    background-color: rgb(255, 251, 0);
+}
+
+footer {
+    background: linear-gradient(70deg, rgb(24, 24,24), rgb(25, 29, 29));
+    padding: 36px 0;
+}
+
+footer ul {
+    display: flex;
+    justify-content: center;
+    /* padding: 40px; */
+}
+
+footer li {
+    width: 80px;
+    height: 80px;
+    margin: 0 50px;
+}
+
+footer img {
+    width: 100%;
+    height: 100%;
+}
