--- a/travel-page/styles.css
+++ b/travel-page/styles.css
@@ -6,8 +6,8 @@
 }
 
 #hero-content {
-    width: 800px;
-    background-color: rgb(51, 47, 47, 0.8);
+    width: 900px;
+    background-color: rgba(51, 47, 47, 0.8);
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
     border-radius: 8px;
     text-align: center;
@@ -21,7 +21,7 @@
     color: white;
     text-transform: uppercase;
     font-size: 50px;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     margin: 0;
 }
 
@@ -48,6 +48,11 @@
     background-color: rgb(255, 238, 0);
 }
 
+#highlights {
+    padding: 24px;
+    background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
+}
+
 #highlights h2 {
     text-transform: uppercase;
     text-align: center;
@@ -56,7 +61,7 @@
     margin: 24px 0;
 }
 
-.destinations {
+#destinations {
     display: flex;
     justify-content: center;
     width: 90%;
@@ -66,11 +71,11 @@
 
 .destination {
     margin: 0 20px;
+    text-transform: uppercase;
 }
 
 .destination p {
     text-align: center;
-    text-transform: uppercase;
     font-size: 24px;
     color: rgb(124, 123, 123);
     margin: 20px 0;
@@ -85,5 +90,5 @@
 }
 
 .destination strong {
-    color: rgb(0, 160, 117)
+    color: rgb(0, 160, 117);
 }
