--- a/webfood-page/styles.css
+++ b/webfood-page/styles.css
@@ -9,19 +9,33 @@ a {
 }
 
 #main-header {
-    height: 80px;
+    height: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(21, 26, 24);
-    padding: 0 20px;
+    padding: 0 5%;
 }
 
 #logo {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     color: rgb(238, 164, 80);
     text-transform: uppercase;
+}
+
+.menu-btn {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 3rem;
+    height: 3rem;
+}
+
+.menu-btn span {
+    width: 100%;
+    height: 3px;
+    background-color: white;
 }
 
 #main-header ul {
@@ -32,52 +46,79 @@ a {
 }
 
 #main-header li {
-    margin: 0 16px;
+    margin: 0 1rem;
 }
 
 #main-header nav a {
     color: rgb(185, 131, 31);
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 #main-header nav a:hover {
     color: rgb(228, 163, 44);
 }
 
+#side-drawer {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(29, 26, 27);
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+}
+
+#side-drawer ul {
+    list-style: none;
+    margin: 0;
+    padding: 4rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#side-drawer a {
+    color: rgb(253, 231, 213);
+    font-size: 2rem;
+}
+
+#side-drawer li {
+    margin: 1rem 0;
+}
+
 main h1 {
     text-align: center;
     color: rgb(238, 164, 80);
-    font-size: 48px;
+    font-size: 3rem;
 }
 
 #latest-products {
     width: 80%;
-    margin: 50px auto;
+    margin: 2rem auto;
 }
 
 #latest-products ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 16px;
-    list-style-type: none;
+    gap: 1rem;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .food-item {
     background-color: rgb(228, 206, 182);
-    border-radius: 8px;
+    border-radius: 6px;
     overflow: hidden;
 }
 
 .food-item img {
-    height: 240px;
+    height: 15rem;
     width: 100%;
     object-fit: cover;
 }
 
 .food-item-content {
-    padding: 16px;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -85,9 +126,27 @@ main h1 {
     background-color: rgb(228, 157, 44);
     color: white;
     border-radius: 4px;
-    padding: 8px 24px;
+    padding: 0.5rem 1.5rem;
 }
 
 .btn:hover {
     background-color: rgb(221, 134, 34);
+}
+
+@media (max-width: 48rem) {
+    #main-header nav {
+        display: none;
+    }
+
+    .menu-btn {
+        display: flex;
+    }
+
+    main h1 {
+        font-size: 1.5rem;
+    }
+
+    #latest-products ul {
+        grid-template-columns: 100%;
+    }
 }
