--- a/webfood-page/styles.css
+++ b/webfood-page/styles.css
@@ -62,9 +62,22 @@ a {
     width: 100%;
     height: 100%;
     background-color: rgb(29, 26, 27);
-    /*position: fixed;*/
-    /*top: 0;*/
-    /*left: 0;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+#side-drawer:target {
+    display: block;
+}
+
+#side-drawer header {
+    height: 5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 5%;
 }
 
 #side-drawer ul {
@@ -120,6 +133,10 @@ main h1 {
 .food-item-content {
     padding: 1rem;
     text-align: center;
+}
+
+.food-item-content h2 {
+    margin-bottom: 1rem;
 }
 
 .btn {
